--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -77,6 +77,7 @@
           </table>
         <% end %>
       </p>
+    <%= link_to 'Edit Project', edit_project_path(@project) %>
   </div>
   <div id="summary" class="ui-body-<%= theme_code %> ui-content">
     <h2>Response Summary</h2>
