--- a/app/views/experiences/index.html.erb
+++ b/app/views/experiences/index.html.erb
@@ -1,16 +1,26 @@
 <p id="notice"><%= notice %></p>
+<% theme_code = @current_user.nil? ? "a" : @current_user.theme.code %>
 
 <h1>Listing Experiences</h1>
 
-<table>
-  <thead>
+        <table data-role="table"
+          id="basicTable"
+          data-column-btn-theme"<%= theme_code %>" 
+          data-column-popup-theme="<%= theme_code %>" 
+          data-mode="columntoggle"
+          data-column-btn-theme="<%= theme_code %>" 
+          data-column-btn-text="Select columns&hellip;"
+          class="table-stroke ui-shadow table-stripe table-ui-responsive ">
+
+    <thead>
+
     <tr>
       <th>Name</th>
       <th>Course</th>
-      <th>Start Date</th>
-      <th>End Date</th>
-      <th>Active</th>
-      <th colspan="3"></th>
+      <th data-priority="0">Start Date</th>
+      <th data-priority="0">End Date</th>
+      <th data-priority="0">Active</th>
+      <th data-priority="0">Actions</th>
     </tr>
   </thead>
 
@@ -22,9 +32,9 @@
         <td><%= experience.start_date %></td>
         <td><%= experience.end_date %></td>
         <td><%= experience.active %></td>
-        <td><%= link_to 'Show', experience %></td>
-        <td><%= link_to 'Edit', edit_experience_path(experience) %></td>
-        <td><%= link_to 'Destroy', experience, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to 'Show', experience %>&nbsp;|&nbsp;
+        <%= link_to 'Edit', edit_experience_path(experience) %>&nbsp;|&nbsp;
+        <%= link_to 'Destroy', experience, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
   </tbody>
