--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -1,17 +1,26 @@
 <p id="notice"><%= notice %></p>
 
+<% theme_code = @current_user.nil? ? "a" : @current_user.theme.code %>
 <h1>Listing Projects</h1>
 
-<table>
-  <thead>
+        <table data-role="table"
+          id="basicTable"
+          data-column-btn-theme"<%= theme_code %>" 
+          data-column-popup-theme="<%= theme_code %>" 
+          data-mode="columntoggle"
+          data-column-btn-theme="<%= theme_code %>" 
+          data-column-btn-text="Select columns&hellip;"
+          class="table-stroke ui-shadow table-stripe table-ui-responsive ">
+
+    <thead>
     <tr>
       <th>Name</th>
-      <th>Start Date</th>
-      <th>End Date</th>
-      <th>Start DOW</th>
-      <th>End DOW</th>
-      <th>Groups</th>
-      <th colspan="3"></th>
+      <th data-priority="0">Start Date</th>
+      <th data-priority="0">End Date</th>
+      <th data-priority="1">Start DOW</th>
+      <th data-priority="1">End DOW</th>
+      <th data-priority="1">Groups</th>
+      <th data-priority="0">Actions</th>
     </tr>
   </thead>
 
@@ -24,9 +33,9 @@
         <td><%= Date::DAYNAMES.at project.start_dow %></td>
         <td><%= Date::DAYNAMES.at project.end_dow %></td>
         <td><%= project.groups.count %></td>
-        <td><%= link_to 'Show', project %></td>
-        <td><%= link_to 'Edit', edit_project_path(project) %></td>
-        <td><%= link_to 'Destroy', project, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to 'Show', project %>&nbsp;|&nbsp;
+        <%= link_to 'Edit', edit_project_path(project) %>&nbsp;|&nbsp;
+        <%= link_to 'Destroy', project, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
   </tbody>
