--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,18 +1,17 @@
 <h1>Your Tasks</h1>
 <% theme_code = @current_user.nil? ? "a" : @current_user.theme.code %>
 <p>Hello <%= @first_name %>,
-<% if @waiting_tasks.any? %>
-  <% if @waiting_tasks.count == 1 %>
-    You've got one task at the moment.
+  <% if @waiting_tasks.any? %>
+    <% if @waiting_tasks.count == 1 %>
+      You've got one task at the moment.
   <% else %>
-    You've got <%= @waiting_tasks.count %> tasks today.
+      You've got <%= @waiting_tasks.count %> tasks today.
   <% end %>
-<% else %>
-  You do not currently have any tasks due. Check back later or contact your instructor.
-<% end %></p>
-
+  <% else %>
+    You do not currently have any tasks due. Check back later or contact your instructor.
+  <% end %></p>
 <% if @waiting_tasks.any? || @waiting_rosters.any? %>
-<table data-role="table"
+  <table data-role="table"
           id="basicTable"
           data-column-btn-theme"<%= theme_code %>" 
           data-column-popup-theme="<%= theme_code %>" 
@@ -20,88 +19,90 @@
           data-column-btn-theme="<%= theme_code %>" 
           data-column-btn-text="Select columns&hellip;"
           class="table-stroke ui-shadow table-stripe table-ui-responsive ">
-  <thead>
-     <tr>
-     <th>Task Name</th>
-     <th>Status</th>
-     <th data-priority="0">Course Name</th>
-     <th data-priority="1">Open Date</th>
-     <th data-priority="0">Close Date</th>
-     <th data-priority="1">Consent Form</th>
-     </tr>
-  </thead>
-  <tbody>
-     <% @waiting_tasks.each do |task| %>
-        <% if task.class.name == "Assessment" %>
-                <% group = task.group_for_user( @current_user )%>
-                <tr>
-                <td>
-                  <% if(task.is_completed_by_user @current_user) %>
-                    <%= link_to "Assess Group: #{group.name}", edit_installment_path( :assessment_id => task.id, :group_id => group.id ) %>
-                    <br>(Project: <%= task.project.name %>)
-                  <% else %>
-                    <%= link_to "Assess Group: #{group.name}", new_installment_path( :assessment_id => task.id, :group_id => group.id ) %>
-                    <br>(Project: <%= task.project.name %>)
-                  <% end %>
-                </td>
-                <td>
-                  <% if(task.is_completed_by_user @current_user) %>
-                    <em>completed</em>
-                  <% else %>
-                    <em>Not Started</em>
-                  <% end %>
-                </td>
-                <td> <%= group.name %></td>
-                <td> <%= task.project.course.name + "(" + task.project.course.get_roster_for_user( @current_user ).role.name + ")"%></td>
-                <td> <%= task.start_date.in_time_zone( @current_user.timezone ).strftime( "%a, %b %-d at %-l:%M%P %Z") %> </td>
-                <td> <%= task.end_date.in_time_zone( @current_user.timezone ).strftime( "%a, %b %-d at %-l:%M%P %Z") %> </td>
-                <td>
-                  <%= render :partial => "shared/consent", :locals => { :project => task.project } %>
-                </td>
-              </tr>
-        <% else %>
-                <tr>
-                <td>
-                  <% reaction = task.get_user_reaction( @current_user ) %>
-                  <% if reaction.behavior.present? %>
-                    <%= task.name + " experience" %>
-                  <% else %>
-                    <%= link_to task.name + " experience", next_experience_path( :experience_id => task.id ) %>
-                  <% end %>
-                </td>
-                <td>
-                  <em>
-                  <% if reaction.behavior.present? %>
-                    Completed
-                  <% elsif reaction.next_week.nil? %>
-                    97%
-                  <% else %>
-                    <%= reaction.next_week.percent_complete.to_s + "%" %>
-                  <% end %>
-                  </em>
-                </td>
-                <td><%= task.course.name %> (<%= task.course.get_roster_for_user( @current_user ).role.name %>)</td>
-                <td> <%= task.start_date.in_time_zone( @current_user.timezone ).strftime( "%a, %b %-d at %-l:%M%P %Z") %> </td>
-                <td> <%= task.end_date.in_time_zone( @current_user.timezone ).strftime( "%a, %b %-d at %-l:%M%P %Z") %> </td>
-                <td>
-                  N/A
-                </td>
-              </tr>
-         <% end %>
-    <% end %>
-    <% @waiting_rosters.each do |roster| %>
+    <thead>
       <tr>
-      <td>
-        <%= link_to "Accept", accept_roster_path( :roster_id => roster.id ) %> / 
+        <th>Task Name</th>
+        <th>Status</th>
+        <th data-priority="0">Course Name</th>
+        <th data-priority="1">Open Date</th>
+        <th data-priority="0">Close Date</th>
+        <th data-priority="1">Consent Form</th>
+      </tr>
+    </thead>
+    <tbody>
+      <% @waiting_tasks.each do |task| %>
+        <% if task.class.name == "Assessment" %>
+          <% group = task.group_for_user( @current_user )%>
+          <tr>
+            <td>
+              <% if(task.is_completed_by_user @current_user) %>
+                <%= link_to "Assess Group: #{group.name}", edit_installment_path( :assessment_id => task.id, :group_id => group.id ) %>
+                <br>
+                (Project: <%= task.project.name %>)
+                  <% else %>
+                <%= link_to "Assess Group: #{group.name}", new_installment_path( :assessment_id => task.id, :group_id => group.id ) %>
+                <br>
+                (Project: <%= task.project.name %>)
+                  <% end %>
+            </td>
+            <td>
+              <% if(task.is_completed_by_user @current_user) %>
+                <em>completed</em>
+              <% else %>
+                <em>Not Started</em>
+              <% end %>
+            </td>
+            <td> <%= group.name %></td>
+            <td> <%= task.project.course.name + "(" + task.project.course.get_roster_for_user( @current_user ).role.name + ")"%></td>
+            <td> <%= task.start_date.in_time_zone( @current_user.timezone ).strftime( "%a, %b %-d at %-l:%M%P %Z") %> </td>
+            <td> <%= task.end_date.in_time_zone( @current_user.timezone ).strftime( "%a, %b %-d at %-l:%M%P %Z") %> </td>
+            <td>
+              <%= render :partial => "shared/consent", :locals => { :project => task.project } %>
+            </td>
+          </tr>
+        <% else %>
+          <tr>
+            <td>
+              <% reaction = task.get_user_reaction( @current_user ) %>
+              <% if reaction.behavior.present? %>
+                <%= task.name + " experience" %>
+              <% else %>
+                <%= link_to task.name + " experience", next_experience_path( :experience_id => task.id ) %>
+              <% end %>
+            </td>
+            <td>
+              <em>
+                <% if reaction.behavior.present? %>
+                  Completed
+                  <% elsif reaction.next_week.nil? %>
+                  97%
+                  <% else %>
+                  <%= reaction.next_week.percent_complete.to_s + "%" %>
+                <% end %>
+              </em>
+            </td>
+            <td><%= task.course.name %> (<%= task.course.get_roster_for_user( @current_user ).role.name %>)</td>
+            <td> <%= task.start_date.in_time_zone( @current_user.timezone ).strftime( "%a, %b %-d at %-l:%M%P %Z") %> </td>
+            <td> <%= task.end_date.in_time_zone( @current_user.timezone ).strftime( "%a, %b %-d at %-l:%M%P %Z") %> </td>
+            <td>
+              N/A
+                </td>
+          </tr>
+        <% end %>
+      <% end %>
+      <% @waiting_rosters.each do |roster| %>
+        <tr>
+          <td>
+            <%= link_to "Accept", accept_roster_path( :roster_id => roster.id ) %> / 
         <%= link_to "Decline", decline_roster_path( :roster_id => roster.id ) %> enrollment
       </td>
-      <td><em>Waiting</em></td>
-      <td><%= roster.course.name %></td>
-      <td><%= roster.course.start_date.in_time_zone( @current_user.timezone ).strftime( "%a, %b %-d at %-l:%M%P %Z") %></td>
-      <td><%= roster.course.end_date.in_time_zone( @current_user.timezone ).strftime( "%a, %b %-d at %-l:%M%P %Z") %></td>
-      <td>N/A</td>
-      </tr>
-    <% end %>
+          <td><em>Waiting</em></td>
+          <td><%= roster.course.name %></td>
+          <td><%= roster.course.start_date.in_time_zone( @current_user.timezone ).strftime( "%a, %b %-d at %-l:%M%P %Z") %></td>
+          <td><%= roster.course.end_date.in_time_zone( @current_user.timezone ).strftime( "%a, %b %-d at %-l:%M%P %Z") %></td>
+          <td>N/A</td>
+        </tr>
+      <% end %>
     </tbody>
   </table>
 <% end %>
