Added experiences to the reminders.

--- a/app/views/administrative_mailer/remind.html.erb
+++ b/app/views/administrative_mailer/remind.html.erb
@@ -7,7 +7,7 @@
           <h1>Hello, <%= @user.first_name %>.</h1>
           <p>
           This email is to serve as a friendly reminder
-          that you have a self- and peer-assessment due at
+          that you have an open task waiting for you at
           this time. Please <%= link_to 'login', root_url %>
           at your earliest convenience to complete what is
           available.
