--- a/app/views/administrative_mailer/remind.text.erb
+++ b/app/views/administrative_mailer/remind.text.erb
@@ -1,7 +1,7 @@
 Hello, <%= @user.first_name %>.
 
 This email is to serve as a friendly reminder that you have
-a self- and peer-assessment due at this time. Please login
+an open task waiting for you at this time. Please login
 at your earliest convenience to complete what is available.
 
 <%= root_url %>
