--- a/app/views/administrative_mailer/summary_report.text.erb
+++ b/app/views/administrative_mailer/summary_report.text.erb
@@ -1,7 +1,7 @@
 Hello, <%= @user.first_name %>.
 
-Below is your students' completion report from this past
-week's assessment administered by <%= link_to "CoLab.online", root_url %>.
+Below is your students' completion report from <%= @name %> at
+<%= link_to "CoLab.online", root_url %> which just wrapped up:
 
 Student | Completed at:
 <% @completion_report.keys do |user| %>
