--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -91,16 +91,10 @@
         <td>Experience</td>
         <td><%= reaction.updated_at.to_s %></td>
         <td>
-        <% if reaction.behavior.present? %>
-          Completed
-        <% elsif reaction.next_week.nil? %>
-          97%
-        <% else %>
-          <%= reaction.next_week.percent_complete.to_s + "%" %>
-        <% end %>
+          <%= reaction.status %>
         </td>
         <td>
-        <% if reaction.next_week.nil? || reaction.next_week.percent_complete > 0 %>
+        <% if reaction.status != "Not started" %>
           Scenario ID: <%= reaction.narrative.id + (100 * reaction.narrative.scenario.id) %>
         <% else %>
           You must begin the experience first
