--- a/app/views/experiences/_form.html.erb
+++ b/app/views/experiences/_form.html.erb
@@ -44,8 +44,8 @@
             <tbody>
               <% @experience.course.enrolled_students.each do |student| %>
                 <tr><% reaction = @experience.get_user_reaction( student ) %>
-                  <td><%= student.last_name %></td>
-                  <td><%= student.first_name %></td>
+                  <td><%= student.last_name.nil? ? "[not given]" : student.last_name %></td>
+                  <td><%= student.first_name.nil? ? "[not given]" : student.first_name %></td>
                   <td><%= mail_to student.email %></td>
                   <% if reaction.behavior.present? #completed %>
                     <td>Completed</td>
@@ -65,14 +65,14 @@
                     <td><%= reaction.narrative.member %></td>
                     <td>Not Completed</td>
                     <td>Not Completed</td>
-                  <% elsif reaction.next_week.percent_complete == 0 #not started %>
+                  <% elsif reaction.status == "Not started" %>
                     <td>0%</td>
                     <td>Not Started</td>
                     <td>Not Started</td>
                     <td>Not Started</td>
                     <td>Not Started</td>
                   <% else #in progress %>
-                    <td><%= reaction.next_week.percent_complete.to_s + "%" %></td>
+                    <td><%= reaction.status %></td>
                     <td><%= reaction.narrative.scenario.behavior.name %></td>
                     <td><%= reaction.narrative.member %></td>
                     <td><%= reaction.narrative.scenario.behavior.name %></td>
