--- a/app/views/projects/_form.html.erb
+++ b/app/views/projects/_form.html.erb
@@ -16,10 +16,31 @@
         <%= f.association :course %>
         <%= f.input :name %>
         <%= f.input :active %>
-        <%= f.input :start_date, as: :date_time_local %>
-        <%= f.input :end_date, as: :date_time_local %>
-        <%= f.input :start_dow, collection: Date::DAYNAMES.each_with_index.to_a, prompt: true, label: "Starting day of the week"  %>
-        <%= f.input :end_dow, collection: Date::DAYNAMES.each_with_index.to_a, prompt: true, label: "Ending day of the week"  %>
+        <table width="100%">
+          <tr>
+            <td width="45%">
+              <%= f.input :start_date, as: :date_time_local, label: "Project start date" %>
+              </br>
+            </td>
+            <td rowspan="2" width="10%" align="center" valign="center">&mdash;</td>
+            <td width="45%">
+              <%= f.input :end_date, as: :date_time_local, label: "Project end date" %>
+            </td>
+          </tr>
+            <td>
+              <%= f.input :start_dow,
+                          collection: Date::DAYNAMES.each_with_index.to_a,
+                          prompt: true,
+                          label: "Opens every"  %>
+            </td>
+            <td>
+              <%= f.input :end_dow,
+                          collection: Date::DAYNAMES.each_with_index.to_a,
+                          prompt: true,
+                          label: "Closes every"  %>
+            </td>
+          </tr>
+        </table>
         <%= f.association :factor_pack, prompt: true %>
         <%= f.association :style, prompt: true %>
         <%= f.input :description, as: :text %>
@@ -30,7 +51,7 @@
     <div id="groups" class="ui-body-<%= theme_code %> ui-content">
       <h2>Group memberships</h2>
       <% if @project.groups.any? || @project.enrolled_user_rosters.any? %>
-        <table width="90%" data-role="table"
+        <table id="project_table" width="90%" data-role="table"
           id="basicTable"
           data-column-btn-theme"<%= theme_code %>" 
           data-column-popup-theme="<%= theme_code %>" 
